--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -83,6 +83,9 @@
     <EditText
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:minWidth="32dp"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </RelativeLayout>
