Photo gallery prompt

--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -39,7 +39,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:onClick="onClick"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:ignore="DuplicateClickableBoundsCheck">
         <!--
         <EditText
             android:layout_width="match_parent"
@@ -86,6 +87,7 @@
         android:layout_height="wrap_content"
         android:inputType="text"
         android:minWidth="32dp"
+        android:minHeight="32dp"
         tools:ignore="SpeakableTextPresentCheck" />
 
 </RelativeLayout>
