--- a/app/src/main/res/layout/activity_item_detail.xml
+++ b/app/src/main/res/layout/activity_item_detail.xml
@@ -9,6 +9,7 @@
 
     <Button
         android:id="@+id/sendButton"
+        android:background="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -47,7 +48,7 @@
         android:layout_marginRight="142dp"
         android:layout_marginBottom="336dp"
         android:contentDescription="@string/contentDescription"
-        android:onClick="onClickUploadFile"
+        android:onClick="@onClickUploadFile"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +58,7 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="114dp"
+        android:layout_width="200dp"
         android:layout_height="61dp"
         android:layout_marginStart="280dp"
         android:layout_marginLeft="280dp"
