--- a/app/src/main/res/layout/fragment_send_message.xml
+++ b/app/src/main/res/layout/fragment_send_message.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity"
+    tools:context=".activity.MainActivity"
     android:gravity="center_horizontal"
     android:padding="16dp"
     >
