--- a/app/src/main/res/navigation/primary_details_nav_graph.xml
+++ b/app/src/main/res/navigation/primary_details_nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/item_list_fragment"
         android:name="com.example.detailapplication.ItemListFragment"
-        android:label="ItemListFragment">
+        android:label="Imam Finder">
         <action
             android:id="@+id/show_item_detail"
             app:destination="@id/item_detail_fragment" />
@@ -16,7 +16,7 @@
     <fragment
         android:id="@+id/item_detail_fragment"
         android:name="com.example.detailapplication.ItemDetailFragment"
-        android:label="item_detail">
+        android:label="Imam Finder (Imam Details)">
         <argument
             android:name="item_id"
             android:defaultValue=""
