--- a/app/src/main/res/layout-sw600dp/fragment_item_detail.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_item_detail.xml
@@ -12,5 +12,6 @@
         android:layout_height="match_parent"
         android:padding="16dp"
         android:textIsSelectable="true"
-        tools:context="com.example.detailapplication.ItemDetailFragment" />
+        tools:context="com.example.detailapplication.ItemDetailFragment"
+        tools:ignore="SpeakableTextPresentCheck" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
