--- a/app/src/main/res/layout/activity_recycler.xml
+++ b/app/src/main/res/layout/activity_recycler.xml
@@ -7,7 +7,8 @@
     tools:context=".RecyclerActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/wordsRecyclerview"
+        android:id="@+id/recycler_view"
+        android:scrollbars="vertical"
         android:layout_width="409dp"
         android:layout_height="match_parent"
         android:layout_marginStart="16dp"
