--- a/app/src/main/res/layout/recycler_view.xml
+++ b/app/src/main/res/layout/recycler_view.xml
@@ -27,5 +27,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabData"
+        android:layout_width="157dp"
+        android:layout_height="88dp"
+        android:layout_marginStart="112dp"
+        android:layout_marginLeft="112dp"
+        android:layout_marginTop="572dp"
+        android:contentDescription="@string/login"
+        android:onClick="onLogin"
+        android:visibility="invisible"
+        app:layout_anchorGravity="right|fill"
+        app:layout_constraintStart_toStartOf="@+id/my_recycler_view"
+        app:layout_constraintTop_toTopOf="@+id/my_recycler_view"
+        app:srcCompat="@android:drawable/stat_notify_chat"
+        tools:ignore="SpeakableTextPresentCheck" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
