--- a/app/src/main/res/layout/activity_recycler.xml
+++ b/app/src/main/res/layout/activity_recycler.xml
@@ -8,16 +8,15 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
-        android:scrollbars="vertical"
         android:layout_width="409dp"
         android:layout_height="match_parent"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="1dp"
         android:layout_marginBottom="1dp"
+        android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="1dp"
-        android:layout_marginLeft="16dp" />
+        app:layout_constraintStart_toStartOf="parent" /><![CDATA[
+
     app:layout_constraintTop_toTopOf="parent" />
 
+]]>
 </androidx.constraintlayout.widget.ConstraintLayout>
