--- a/app/src/main/res/layout/row_recyclerview.xml
+++ b/app/src/main/res/layout/row_recyclerview.xml
@@ -6,13 +6,32 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/row_item_left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="28dp"
+        android:text="@string/textview_left"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/row_item_right"
+        android:layout_width="72dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="164dp"
+        android:layout_marginTop="28dp"
+        android:text="@string/textview"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
         android:id="@+id/tvRow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="33dp"
-        android:text="TextView"
+        android:layout_marginStart="304dp"
+        android:layout_marginTop="28dp"
+        android:text="@string/textview_right"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="16dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
