--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -12,7 +12,8 @@
         android:layout_height="140dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/item_list"
-        app:srcCompat="@drawable/abdullah_muhammad_imam_finder_ic_launcher_background" />
+        app:srcCompat="@drawable/abdullah_muhammad_imam_finder_ic_launcher_background"
+        android:contentDescription="@string/imam_photo" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/item_list"
